[API] Setup memory cache (#142)
* Setup tickers worker to save it in memory

* Setup rates worker

* Almost done with memory cache

* Setup worker

* Add tests and new env

* Add basic tests to memory

* Fix unit tests

* Add more tests and fix an issue with saveToMemory

* Finish with tests for worker memory

* Add tests to controller

* Fix lint

* Change memory map for rates, update seed

* Fix charts

* Add http get batch request method for tickers

* Fix swagger docs
