# docs/swagger.json
@@ -134,7 +134,6 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
                             "$ref": "#/definitions/controllers.TickerRequest"
                         }
                     }
@@ -267,6 +266,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "USD",
+                        "description": "The currency to show coin assets in",
+                        "name": "currency",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -280,7 +286,7 @@
             }
         },
         "/v2/market/tickers": {
-            "post": {
+            "get": {
                 "description": "Get the tickers for list of ids",
                 "consumes": [
                     "application/json"
@@ -295,12 +301,48 @@
                 "operationId": "get_tickers_v2",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "currency symbol",
+                        "name": "currency",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "List of asset ids",
+                        "name": "assets",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.TickerResponseV2"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Get the tickers for list of ids",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tickers"
+                ],
+                "summary": "Get tickers for list of ids",
+                "operationId": "post_tickers_v2",
+                "parameters": [
+                    {
                         "description": "Ticker",
                         "name": "tickers",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
                             "$ref": "#/definitions/controllers.TickerRequestV2"
                         }
                     }
@@ -446,6 +488,9 @@
                 "provider": {
                     "type": "string"
                 },
+                "provider_url": {
+                    "type": "string"
+                },
                 "total_supply": {
                     "type": "number"
                 },
@@ -495,6 +540,9 @@
                 "change_24h": {
                     "type": "number"
                 },
+                "currency": {
+                    "type": "string"
+                },
                 "provider": {
                     "type": "string"
                 },
@@ -523,8 +571,17 @@
                 "coin": {
                     "type": "integer"
                 },
+                "coin_name": {
+                    "type": "string"
+                },
                 "error": {
                     "type": "string"
+                },
+                "last_update": {
+                    "type": "string"
+                },
+                "market_cap": {
+                    "type": "number"
                 },
                 "price": {
                     "type": "object",
@@ -535,31 +592,16 @@
                 },
                 "type": {
                     "type": "string"
+                },
+                "volume": {
+                    "type": "number"
                 }
             }
         },
         "watchmarket.Tickers": {
             "type": "array",
             "items": {
-                "type": "object",
-                "properties": {
-                    "coin": {
-                        "type": "integer"
-                    },
-                    "error": {
-                        "type": "string"
-                    },
-                    "price": {
-                        "type": "object",
-                        "$ref": "#/definitions/watchmarket.Price"
-                    },
-                    "token_id": {
-                        "type": "string"
-                    },
-                    "type": {
-                        "type": "string"
-                    }
-                }
+                "$ref": "#/definitions/watchmarket.Ticker"
             }
         }
     }
