# services/controllers/charts/normalization.go
@@ -2,6 +2,7 @@ package chartscontroller
 
 import (
 	"context"
+	"encoding/json"
 	"errors"
 	"github.com/trustwallet/blockatlas/coin"
 	"github.com/trustwallet/watchmarket/db/models"
@@ -57,6 +58,29 @@ func toChartsRequestData(cr controllers.ChartRequest) (chartsNormalizedRequest, 
 
 func (c Controller) checkTickersAvailability(coin uint, token string, ctx context.Context) ([]models.Ticker, error) {
 	tr := []models.TickerQuery{{Coin: coin, TokenId: strings.ToLower(token)}}
+	if c.configuration.RestAPI.UseMemoryCache {
+		key := strings.ToLower(watchmarket.BuildID(coin, token))
+		rawResult, err := c.memoryCache.Get(key, ctx)
+		if err != nil {
+			return nil, err
+		}
+		var t watchmarket.Ticker
+		if err = json.Unmarshal(rawResult, &t); err != nil {
+			return nil, err
+		}
+		result := models.Ticker{
+			Coin:        t.Coin,
+			CoinName:    t.CoinName,
+			CoinType:    string(t.CoinType),
+			TokenId:     t.TokenId,
+			Currency:    t.Price.Currency,
+			Provider:    t.Price.Provider,
+			Change24h:   t.Price.Change24h,
+			Value:       t.Price.Value,
+			LastUpdated: t.LastUpdate,
+		}
+		return []models.Ticker{result}, nil
+	}
 	dbTickers, err := c.database.GetTickersByQueries(tr, ctx)
 	if err != nil {
 		return nil, err
